--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ packaging==21.3
 pandas==1.5.0
 Pillow==9.2.0
 pkgutil-resolve-name==1.3.10
+plotly==5.10.0
 protobuf==3.20.1
 pyarrow==9.0.0
 pydeck==0.8.0b3
@@ -55,6 +56,7 @@ six==1.16.0
 smmap==5.0.0
 streamlit==1.13.0
 streamlit-folium==0.6.15
+tenacity==8.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
