--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 rich==12.5.1
+Rtree==1.0.0
 semver==2.13.0
 Shapely==1.8.4
 six==1.16.0
