--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ geopandas==0.11.1
 gitdb==4.0.9
 GitPython==3.1.27
 idna==3.4
-importlib-metadata==4.12.0
-importlib-resources==5.9.0
+lib-metadata==4.12.0
+lib-resources==5.9.0
 Jinja2==3.1.2
 jsonschema==4.16.0
 kiwisolver==1.4.4
