--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,68 @@
 altair==4.2.0
-attrs==22.1.0
+attrs==23.1.0
 backports.zoneinfo==0.2.1
-blinker==1.5
-branca==0.5.0
-cachetools==5.2.0
-certifi==2022.9.14
+blinker==1.6.2
+branca==0.6.0
+cachetools==5.3.1
+certifi==2023.5.7
 charset-normalizer==2.1.1
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
-commonmark==0.9.1
-contourpy==1.0.5
+contourpy==1.1.0
 cycler==0.11.0
 DateTime==4.7
 decorator==5.1.1
 entrypoints==0.4
-Fiona==1.8.21
+Fiona==1.9.4.post1
 folium==0.12.1.post1
-fonttools==4.37.3
+fonttools==4.40.0
 geojson==2.5.0
 geopandas==0.11.1
-gitdb==4.0.9
-GitPython==3.1.27
+gitdb==4.0.10
+GitPython==3.1.31
 idna==3.4
-lib-metadata==4.12.0
-lib-resources==5.9.0
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
 Jinja2==3.1.2
-jsonschema==4.16.0
+jsonschema==4.17.3
 kiwisolver==1.4.4
-MarkupSafe==2.1.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
 matplotlib==3.6.0
-munch==2.5.0
+mdurl==0.1.2
 numpy==1.23.3
-packaging==21.3
+packaging==23.1
 pandas==1.5.0
-Pillow==9.2.0
-pkgutil-resolve-name==1.3.10
+Pillow==10.0.0
+pkgutil_resolve_name==1.3.10
 plotly==5.10.0
-protobuf==3.20.1
-pyarrow==9.0.0
-pydeck==0.8.0b3
-Pygments==2.13.0
+protobuf==3.20.3
+pyarrow==12.0.1
+pydeck==0.8.1b0
+Pygments==2.15.1
 Pympler==1.0.1
 pyparsing==3.0.9
-pyproj==3.4.0
-pyrsistent==0.18.1
+pyproj==3.5.0
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
+pytz==2023.3
 requests==2.28.1
-rich==12.5.1
-Rtree==1.0.0
-semver==2.13.0
+rich==13.4.2
+semver==3.0.1
 Shapely==1.8.4
-protobuf==3.17.3
 six==1.16.0
 smmap==5.0.0
 streamlit==1.13.0
 streamlit-folium==0.6.15
-tenacity==8.1.0
+tenacity==8.2.2
 toml==0.10.2
 toolz==0.12.0
-tornado==6.2
-typing-extensions==4.3.0
-tzdata==2022.2
-tzlocal==4.2
-urllib3==1.26.12
+tornado==6.3.2
+typing_extensions==4.3.0
+tzlocal==5.0.1
+urllib3==1.26.16
 validators==0.20.0
-zipp==3.8.1
-zope.interface==5.4.0
+zipp==3.15.0
+zope.interface==6.0
+
